# gnome-clips

./: .gitignore  README.md  gnome-clips-paste.in  gnome-clips.in  meson.build
data/: meson.build  org.gnome.Clips.Autostart.desktop  org.gnome.Clips.Autostart.desktop.in  org.gnome.Clips.gschema.xml
gnomeclips/: __init__.py  application.py  clipboard.py  history.py  historylist.py  keybindings.py  popup.py  utils.py  window.py
